Fix carousel spacing and tablet mode view

--- a/src/pages/HomePage/RecommendedBookSection/RecommendedBookCarousel/RecommendedBookCarousel.css
+++ b/src/pages/HomePage/RecommendedBookSection/RecommendedBookCarousel/RecommendedBookCarousel.css
@@ -44,7 +44,7 @@
 }
 
 .carousel-container .react-multi-carousel-track {
-  padding-left: 40px;
+  padding-left: 30px;
 }
 
 @media only screen and (max-width: 800px) {
@@ -90,5 +90,11 @@
 
   .carousel-container .react-multi-carousel-track {
     padding-left: 60px;
+  }
+}
+
+@media only screen and (min-width: 600px) and (max-width: 800px) {
+  .carousel-padding {
+    padding: 0 120px;
   }
 }
